src/objects/SFDC_Schedule__c.object
<CustomObject>
    <description>Resources project their schedules in terms of percentage utilization on a specific Project.</description>
    <fields>
        <fullName>Fri_booked__c</fullName>
        <label>Fri %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fri_booked_detail__c</fullName>
        <label>F detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>meetings</fullName>
                </value>
                <value>
                    <fullName>out-of-town</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mon_booked__c</fullName>
        <label>Mon %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mon_booked_detail__c</fullName>
        <label>M detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>meetings</fullName>
                </value>
                <value>
                    <fullName>out-of-town</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipName>R00N60000001VqtLEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>SFDC_Resource__c</referenceTo>
        <relationshipName>R00N60000001Vqu6EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sat_booked__c</fullName>
        <label>Sat %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sat_booked_detail__c</fullName>
        <label>Sa detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>meetings</fullName>
                </value>
                <value>
                    <fullName>out-of-town</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sun_booked__c</fullName>
        <label>Sun %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sun_booked_detail__c</fullName>
        <label>Su detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>meetings</fullName>
                </value>
                <value>
                    <fullName>out-of-town</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thu_booked__c</fullName>
        <label>Thu %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Thu_booked_detail__c</fullName>
        <label>Th detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>meetings</fullName>
                </value>
                <value>
                    <fullName>out-of-town</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tue_booked__c</fullName>
        <label>Tue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tue_booked_detail__c</fullName>
        <label>T detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>meetings</fullName>
                </value>
                <value>
                    <fullName>out-of-town</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wed_booked__c</fullName>
        <label>Wed %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wed_booked_detail__c</fullName>
        <label>W detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>work</fullName>
                </value>
                <value>
                    <fullName>meetings</fullName>
                </value>
                <value>
                    <fullName>out-of-town</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_of__c</fullName>
        <label>Week of</label>
        <type>Date</type>
    </fields>
    <label>Schedule</label>
    <listViews>
        <fullName>AllSchedules</fullName>
        <columns>NAME</columns>
        <columns>Week_of__c</columns>
        <columns>Projects__c</columns>
        <columns>Resource__c</columns>
        <columns>Mon_booked__c</columns>
        <columns>Tue_booked__c</columns>
        <columns>Wed_booked__c</columns>
        <columns>Thu_booked__c</columns>
        <columns>Fri_booked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Schedules</label>
    </listViews>
    <nameField>
        <displayFormat>Schedule {000}</displayFormat>
        <label>Schedule#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>